# interpy

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
cli/: fmt_tasks.toml  tests_tasks.toml  type_check_tasks.toml
src/: _implements.py  _validators.py  errors.py
tests/: conftest.py  test_implements.py  test_validators.py
