[tool.poetry]
name = "interpy"
version = "0.1.0"
description = ""
authors = ["Daniel Joris <rizeon@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/danieljoris/interpy"
repository = "https://github.com/danieljoris/interpy"
packages = [{ include = "src" }]
keywords = [
  "interface",
  "protocol",
  "type checking",
  "python",
  "interfaces",
  "code validation",
  "static typing",
  "decorators",
  "type enforcement",
  "code consistency",
  "development tools",
  "c# style interfaces",
  "software architecture",
  "code structure",
  "protocols",
  "implementation errors",
  "type safety",
  "python utilities",
  "interface methods",
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
poethepoet = "^0.27.0"
safety = "^3.2.4"
bandit = "^1.7.9"

[tool.poe]
include = [
  "./cli/tests_tasks.toml",
  "./cli/fmt_tasks.toml",
  "./cli/type_check_tasks.toml",
]


[tool.black]
line-length = 95
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.eggs
  | \.idea
  | \__pycache__
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \venv
  | \front
  | \build
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "8.2.2"
# -ra - Shows a summary of tests that failed, were skipped, or xfail (expected to fail)
# -q - Runs pytest in quiet mode, showing only the summary of the test results
addopts = "-ra -q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
